--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ layout: landing
 
 	<section class="spotlight">
 		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:right;"><iframe width="700" height="600" src="https://sketchfab.com/models/d6e3f6d2eb0a408383051760c600bc33/embed?autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
+			<div class="sketchfab-embed-wrapper" style="float:right;"><iframe width="700" height="600" src="https://sketchfab.com/models/d6e3f6d2eb0a408383051760c600bc33/embed?autospin=0.2&amp;autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
 				    webkitallowfullscreen="true" onmousewheel=""></iframe>
 			</div>
 		</div>
@@ -68,7 +68,7 @@ layout: landing
 
 	<section class="spotlight">
 		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:left;"><iframe width="700" height="600" src="https://sketchfab.com/models/d2041cbd4db74eacb269bcea305ba40d/embed?autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
+			<div class="sketchfab-embed-wrapper" style="float:left;"><iframe width="700" height="600" src="https://sketchfab.com/models/d2041cbd4db74eacb269bcea305ba40d/embed?autospin=0.2&amp;autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
 				    webkitallowfullscreen="true" onmousewheel=""></iframe>
 			</div>
 		</div>
@@ -83,7 +83,7 @@ The lightbulb was taken from an external source, which can be found <a href="htt
 
 	<section class="spotlight">
 		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:right;"><iframe width="700" height="600" src="https://sketchfab.com/models/7cc067ce425c454fb06383f980017232/embed?autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
+			<div class="sketchfab-embed-wrapper" style="float:right;"><iframe width="700" height="600" src="https://sketchfab.com/models/7cc067ce425c454fb06383f980017232/embed?autospin=0.2&amp;autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
 				    webkitallowfullscreen="true" onmousewheel=""></iframe>
 			</div>
 		</div>
@@ -96,7 +96,7 @@ The lightbulb was taken from an external source, which can be found <a href="htt
 
 	<section class="spotlight">
 		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:left;"><iframe width="700" height="600" src="https://sketchfab.com/models/a42f980f9ef943638acdd02620d5c656/embed?autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
+			<div class="sketchfab-embed-wrapper" style="float:left;"><iframe width="700" height="600" src="https://sketchfab.com/models/a42f980f9ef943638acdd02620d5c656/embed?autospin=0.2&amp;autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
 				    webkitallowfullscreen="true" onmousewheel=""></iframe>
 			</div>
 		</div>
@@ -116,7 +116,7 @@ The lightbulb was taken from an external source, which can be found <a href="htt
 
 	<section class="spotlight">
 		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:right;"><iframe width="700" height="600" src="https://sketchfab.com/models/5e9f93f8c54d482eaf6a338fba3a3ce2/embed?autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
+			<div class="sketchfab-embed-wrapper" style="float:right;"><iframe width="700" height="600" src="https://sketchfab.com/models/5e9f93f8c54d482eaf6a338fba3a3ce2/embed?autospin=0.2&amp;autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
 				    webkitallowfullscreen="true" onmousewheel=""></iframe>
 			</div>
 		</div>
@@ -139,7 +139,7 @@ The lightbulb was taken from an external source, which can be found <a href="htt
 
 	<section class="spotlight">
 		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:left;"><iframe width="700" height="600" src="https://sketchfab.com/models/ee95b3c1d69140a2971822b78785865e/embed?autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
+			<div class="sketchfab-embed-wrapper" style="float:left;"><iframe width="700" height="600" src="https://sketchfab.com/models/ee95b3c1d69140a2971822b78785865e/embed?autospin=0.2&amp;autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
 				    webkitallowfullscreen="true" onmousewheel=""></iframe>
 			</div>
 		</div>
@@ -158,7 +158,7 @@ The lightbulb was taken from an external source, which can be found <a href="htt
 
 	<section class="spotlight">
 		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:right;"><iframe width="700" height="600" src="https://sketchfab.com/models/db4ff490a8e6423ba994306c893984d3/embed?autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
+			<div class="sketchfab-embed-wrapper" style="float:right;"><iframe width="700" height="600" src="https://sketchfab.com/models/db4ff490a8e6423ba994306c893984d3/embed?autospin=0.2&amp;autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
 				    webkitallowfullscreen="true" onmousewheel=""></iframe>
 			</div>
 		</div>
@@ -175,7 +175,7 @@ The lightbulb was taken from an external source, which can be found <a href="htt
 
 	<section class="spotlight">
 		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:left;"><iframe width="700" height="600" src="https://sketchfab.com/models/f385ed0ebb8c45f38ae2310b17c40d5b/embed?autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
+			<div class="sketchfab-embed-wrapper" style="float:left;"><iframe width="700" height="600" src="https://sketchfab.com/models/f385ed0ebb8c45f38ae2310b17c40d5b/embed?autospin=0.2&amp;autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
 						webkitallowfullscreen="true" onmousewheel=""></iframe>
 			</div>
 		</div>
